<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">
    <data>
        <variable
            name="source"
            type="com.example.starsign.network.NetworkSource"/>
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/monsterformulier"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#70ADD9">

        <TextView
            android:id="@+id/createsourcetitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/create_source"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/sourcetitlelabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/title_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/createsourcetitle" />

        <EditText
            android:id="@+id/sourcetitletext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@{source.title}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sourcetitlelabel"
            android:autofillHints="The title of the source card"
            tools:ignore="LabelFor"
            tools:targetApi="o" />

        <TextView
            android:id="@+id/sourcetypelabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/source_type"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sourcetitletext" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/sourcetypes"
            android:layout_width="350dp"
            android:layout_height="350dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sourcetypelabel" />

        <Button
            android:id="@+id/sourcecreatorbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/source_add"
            style="@style/menuTheme"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sourcetypes" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>