<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">
<data>
    <variable
        name="spellattribute"
        type="com.example.starsign.database.Mana" />
    <variable
        name="amount"
        type="Integer"/>
</data>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:weightSum="2.5">
        <TextView
            android:id="@+id/manalabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{spellattribute.toString()}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <EditText
            android:id="@+id/manaamounttext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:autofillHints="Set here how much of that mana is required"
            android:background="#FFFFFF"
            android:ems="10"
            android:inputType="number"
            android:text="@{amount.toString()}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="LabelFor"
            tools:targetApi="o" />

    </LinearLayout>
</layout>